--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,13 +295,13 @@
     "            return None\n",
     "        else:\n",
     "            list_open.append(restaurant)\n",
-    "    reurtlist_open\n",
+    "    return list_open\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
