automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
     "    list_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
-    "            return None\n",
+    "            pass\n",
     "        else:\n",
     "            list_open.append(restaurant)\n",
     "    return list_open\n",
