--- a/index.ipynb
+++ b/index.ipynb
@@ -194,6 +194,8 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        \n",
+    "    \n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative\n",
