--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) == len(alternative['price']):\n",
-    "        \n",
+    "        return 'They are the same price ran'\n",
     "        \n",
     "    \n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
