automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) == len(alternative['price']):\n",
-    "        return 'They are the same price ran'\n",
-    "        \n",
+    "        return 'They are the same price!'\n",
+    "    \n",
     "    \n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
