automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            pass\n",
-    "        else:\n",
+    "#        else:\n",
     "            list_open.append(restaurant)\n",
     "    return list_open\n",
     "        "
