automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fork & Fig'"
+       "'Frontier Restaurant'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
