--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,8 +293,8 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            pass\n",
-    "#        else:\n",
-    "    list_open.append(restaurant)\n",
+    "        else:\n",
+    "            list_open.append(restaurant)\n",
     "    return list_open\n",
     "        "
    ]
