automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "def open_restaurants(restaurants):\n",
     "    list_open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']:\n",
+    "        if not restaurant['is_closed']:\n",
     "            pass\n",
     "        else:\n",
     "            list_open.append(restaurant)\n",
